<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.thought.ThoughtFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/text_header_label"
            android:textSize="@dimen/text_header"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/text_description_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:text="@string/app_description_label"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/no_thought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_thoughts_label"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_thoughts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginTop="100dp"
        android:padding="4dp"
        tools:listitem="@layout/thought_item"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/extended_fab_content_desc"
        android:text="@string/extended_fab_label"
        app:icon="@*android:drawable/ic_plus" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>