<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addthought.ThoughtDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_header"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_new_thought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/thought_dialog"/>

        <Button
            android:id="@+id/btn_thought"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:background="@color/real_blue"
            android:text="@string/button_text"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>